tex from report is now calling fig

--- a/paper/sbc-template.tex
+++ b/paper/sbc-template.tex
@@ -82,6 +82,13 @@ Section titles must be in boldface, 13pt, flush left. There should be an extra
 paragraph of each section should not be indented, while the first lines of
 subsequent paragraphs should be indented by 1.27 cm.
 
+\begin{figure}
+\centering
+\includegraphics[width=1.00\textwidth]{figs/fitsim}
+\caption{mey pay na tua mao}
+\label{fig:fitsim}
+\end{figure}
+
 \subsection{Subsections}
 
 The subsection titles must be in boldface, 12pt, flush left.
